[tool.poetry]
name = "strelka-docs"
version = "0.1.0"
description = ""
authors = ["Paul Hutelmyer <Paul.Hutelmyer@target.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.5.3"
mkdocstrings = "^0.24.1"
mkdocs-material = "^9.5.14"
mkdocstrings-python = "^1.9.0"
mkdocs-open-in-new-tab = "^1.0.3"
ruamel-yaml = "^0.18.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
